--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
     url: jdbc:mysql://j4b106.p.ssafy.io/b106?useUnicode=true&charaterEncoding=utf-8
     username: root
     password: j4B106_dogcat
+  main:
+    allow-bean-definition-overriding: true
+
